--- a/index.html
+++ b/index.html
@@ -8,11 +8,37 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- <div class="container">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div> -->
+
+    <div class="overlay"></div>
+
+    <a href=""class="button">Швидкий старт</a>
+
     <div class="container">
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <li class="list-item icon-delivery">
+        <h2 class="title">Lorem ipsum dolor sit</h2>
+        <p class="text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed
+            molestias voluptate vero laborum eos sunt cumque recusandae nemo qui
+            accusantium nobis iure alias animi, esse totam praesentium rerum
+            ullam?
+        </p>
+    </li>
+
+    <li class="list-item icon-mobile">
+        <h2 class="title">Lorem ipsum dolor sit</h2>
+        <p class="text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed
+            molestias voluptate vero laborum eos sunt cumque recusandae nemo qui
+            accusantium nobis iure alias animi, esse totam praesentium rerum
+            ullam?
+        </p>
+    </li>
     </div>
 </body>
 </html>
