--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="box"></div>
     </div> -->
 
-    <div class="overlay"></div>
+    <!-- <div class="overlay"></div>
 
     <a href=""class="button">Швидкий старт</a>
 
@@ -39,6 +39,12 @@
             ullam?
         </p>
     </li>
-    </div>
+    </div> -->
+    <h1>main title</h1>
+    <h2>title</h2>
+    <p class="text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, rerum?
+    </p>
+    <a href="/text.html">макет</a>
 </body>
 </html>
